@@ -94,6 +94,8 @@ if(WIN32 AND LIBVPX)
 		set(libvpx_arch "x86")
 	elseif(TARGET_ARCH STREQUAL "x86_64")
 		set(libvpx_arch "x64")
+	elseif(TARGET_ARCH STREQUAL "arm64")
+		set(libvpx_arch "arm64")
 	else()
 		message(FATAL_ERROR "Unhandled TARGET_ARCH '${TARGET_ARCH}'")
 	endif()
@@ -299,6 +301,11 @@ if(NOT EMSCRIPTEN AND FFMPEG)
 			list(PREPEND ffmpeg_configure_args --arch=x86_32)
 		elseif(TARGET_ARCH STREQUAL "x86_64")
 			list(PREPEND ffmpeg_configure_args --arch=x86_64)
+		elseif(TARGET_ARCH STREQUAL "arm64")
+			# ffmpeg requests the GNU assembler even when building with MSVC.
+			# That sounds to me like it wouldn't work, so I'm just disabling it
+			# for now instead of sinking time into getting that thing installed.
+			list(PREPEND ffmpeg_configure_args --arch=arm64 --disable-asm)
 		else()
 			message(FATAL_ERROR "Unhandled TARGET_ARCH '${TARGET_ARCH}'")
 		endif()
