@@ -132,11 +132,11 @@ function(build_dependency name version build_type)
 	if(generator STREQUAL "qmake")
 		_build_qmake("${build_type}" "${source_build_dir}" ${BUILD_ARGS})
 	elseif(generator STREQUAL "automake")
-		_build_automake("${build_type}" "${BUILD_TARGET_BITS}" "${source_build_dir}" ${BUILD_ARGS})
+		_build_automake("${build_type}" "${ARG_TARGET_ARCH}" "${source_build_dir}" ${BUILD_ARGS})
 	elseif(generator STREQUAL "cmake")
-		_build_cmake("${build_type}" "${BUILD_TARGET_BITS}" "${source_build_dir}" ${BUILD_ARGS})
+		_build_cmake("${build_type}" "${ARG_TARGET_ARCH}" "${source_build_dir}" ${BUILD_ARGS})
 	elseif(WIN32 AND generator STREQUAL "msbuild")
-		_build_msbuild("${build_type}" "${BUILD_TARGET_BITS}" "${source_build_dir}" ${BUILD_ARGS})
+		_build_msbuild("${build_type}" "${ARG_TARGET_ARCH}" "${source_build_dir}" ${BUILD_ARGS})
 	else()
 		message(FATAL_ERROR "Unknown build kind '${generator}'")
 	endif()
@@ -146,7 +146,7 @@ function(build_dependency name version build_type)
 	endif()
 endfunction()
 
-function(_build_automake build_type target_bits source_dir)
+function(_build_automake build_type target_arch source_dir)
 	set(configure "${source_dir}/configure")
 	cmake_parse_arguments(
 		PARSE_ARGV 2 ARG "ASSIGN_HOST;ASSIGN_PREFIX;BROKEN_INSTALL;NEEDS_VC_WIN_TARGET;WIN32_CC_CL"
@@ -215,12 +215,14 @@ function(_build_automake build_type target_bits source_dir)
 	# configured for 32bit, so it needs to be told explicitly what to build for.
 	# This should be the last element in the configure_flags list!
 	if(WIN32 AND ARG_NEEDS_VC_WIN_TARGET)
-		if(target_bits EQUAL 32)
+		if(target_arch STREQUAL "x86")
 			list(APPEND configure_flags VC-WIN32)
-		elseif(target_bits EQUAL 64)
+		elseif(target_arch STREQUAL "x86_64")
 			list(APPEND configure_flags VC-WIN64A)
+		elseif(target_arch STREQUAL "arm64")
+			list(APPEND configure_flags VC-WIN64-ARM)
 		else()
-			message(FATAL_ERROR "Invalid target_bits '${target_bits}' for ${ARG_SOLUTION}")
+			message(FATAL_ERROR "Invalid target_arch '${target_arch}' for ${ARG_SOLUTION}")
 		endif()
 	endif()
 
@@ -294,7 +296,7 @@ function(_build_automake build_type target_bits source_dir)
 	)
 endfunction()
 
-function(_build_cmake build_type target_bits source_dir)
+function(_build_cmake build_type target_arch source_dir)
 	if(OVERRIDE_CMAKE_COMMAND)
 		set(configure "${OVERRIDE_CMAKE_COMMAND}")
 	else()
@@ -305,7 +307,7 @@ function(_build_cmake build_type target_bits source_dir)
 	cmake_parse_arguments(PARSE_ARGV 2 "CMAKE_ARG" "NO_DEFAULT_FLAGS;NO_DEFAULT_BUILD_TYPE" "" "")
 	_parse_flags("${build_type}" "${source_dir}" configure configure_flags env ${CMAKE_ARG_UNPARSED_ARGUMENTS})
 
-	if(WIN32 AND target_bits EQUAL 32)
+	if(WIN32 AND target_arch STREQUAL "x86")
 		list(APPEND configure -A Win32)
 	endif()
 
@@ -462,7 +464,7 @@ function(get_android_toolchain out_var ndk)
 	set(${out_var} "${ndk}/toolchains/llvm/prebuilt/${kernel}-x86_64" PARENT_SCOPE)
 endfunction()
 
-function(_build_msbuild build_type target_bits source_dir)
+function(_build_msbuild build_type target_arch source_dir)
 	cmake_parse_arguments(PARSE_ARGV 2 ARG "" "SOLUTION;SHARED;STATIC;DEBUG_SHARED;DEBUG_STATIC" "INCLUDES;RM")
 
 	if(build_type STREQUAL "debug")
@@ -476,12 +478,14 @@ function(_build_msbuild build_type target_bits source_dir)
 		set(ARG_STATIC "${ARG_DEBUG_STATIC}")
 	endif()
 
-	if(target_bits EQUAL 32)
+	if(target_arch STREQUAL "x86")
 		set(platform "Win32")
-	elseif(target_bits EQUAL 64)
+	elseif(target_arch STREQUAL "x86_64")
 		set(platform "x64")
+	elseif(target_arch STREQUAL "arm64")
+		set(platform "ARM64")
 	else()
-		message(FATAL_ERROR "Invalid target_bits '${target_bits}' for ${ARG_SOLUTION}")
+		message(FATAL_ERROR "Invalid target_arch '${target_arch}' for ${ARG_SOLUTION}")
 	endif()
 
 	execute_process(
